<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_alarm">

    <fragment
        android:id="@+id/navigation_alarm"
        android:name="com.example.accountasleep.ui.home.HomeFragment"
        android:label="@string/title_alarm"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_photos"
        android:name="com.example.accountasleep.ui.dashboard.DashboardFragment"
        android:label="@string/title_photos"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.accountasleep.ui.notifications.NotificationsFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_notifications" />
</navigation>