<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    Floating Button -->
<com.google.android.material.floatingactionbutton.FloatingActionButton
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/floatingActionButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_gravity="end|bottom"

    android:clickable="true"
    app:srcCompat="@drawable/ic_add"
    android:focusable="true" />

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--    Note    -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:background="#FFADF3"
        android:padding="5dp"
        android:textAlignment="center"
    />



    <!--    Instructions    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_pictures"
            android:textSize="28sp"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <ImageButton
                android:id="@+id/ImageButton01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:src="@drawable/ic_baseline_photo_camera_40" />

            <ImageButton
                android:id="@+id/ImageButton02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:src="@drawable/ic_baseline_photo_library_40"
                android:layout_marginLeft="10dp" />
        </LinearLayout>
    </LinearLayout>

    <!--    Queued Photos-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/queue_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/queued_photos"
            android:textSize="18sp"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/queue_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/queue_hint"
            android:textSize="16sp"
            android:layout_gravity="start"/>

        <GridView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:horizontalSpacing="6dp"
            android:numColumns="3"
            android:verticalSpacing="6dp">
        </GridView>

    </LinearLayout>

</LinearLayout>


</RelativeLayout>