<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="20dp"
    android:orientation="vertical">

<!--    Chenyang-->
<!--    Instructions-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_pictures"
            android:textSize="28sp"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint"
            android:textSize="18sp"
            android:layout_gravity="center"/>
    </LinearLayout>

<!--Examples-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/example_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examples"
            android:textSize="18sp"
            android:layout_gravity="start"/>

        <GridView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:horizontalSpacing="6dp"
            android:numColumns="3"
            android:verticalSpacing="6dp"/>

    </LinearLayout>



    <!-- Vasu -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
    >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Add your own!"
            android:textSize="20dp"
            android:textColor="@color/black"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"
        >
            <ImageButton
                android:id="@+id/ImageButton01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:src="@drawable/ic_baseline_photo_camera_40"></ImageButton>

            <ImageButton
                android:id="@+id/ImageButton02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:src="@drawable/ic_baseline_photo_library_40"
                android:layout_marginLeft="10dp"></ImageButton>
        </LinearLayout>

</LinearLayout>