<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <!--    Floating Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="90dp"

        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/ic_baseline_photo_library_40">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonCam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="90dp"

        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/ic_baseline_photo_camera_40">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="90dp"

        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/ic_add">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--    Note-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:background="#FFADF3"
            android:padding="5dp"
            android:textAlignment="center"
            />

        <!--    Queued Photos-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="60dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/queue_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/queued_photos"
                android:textSize="24sp"
                android:layout_gravity="start"/>

            <TextView
                android:id="@+id/queue_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/queue_hint"
                android:textSize="16sp"
                android:layout_gravity="start"/>

            <GridView
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:numColumns="auto_fit"
                android:verticalSpacing="20dp"/>

        </LinearLayout>

    </LinearLayout>

<!--    <TextView-->
<!--        android:id="@+id/text_dashboard"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:textAlignment="center"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
</RelativeLayout>